# flake8-plugin

./: .gitignore  Justfile  README.md  pyproject.toml
src/community_of_python_flake8_plugin/: constants.py  plugin.py  utils.py  violation_codes.py  violations.py
src/community_of_python_flake8_plugin/checks/: __init__.py  async_get_prefix.py  comprehension_one_prefix.py  cop001.py  cop001_module_import.py  cop002.py  cop002_stdlib_import.py  cop003.py  cop003_scalar_annotation.py  cop004.py  cop004_name_length.py  cop005.py  cop005_function_verb.py  cop006.py  cop006_async_get_prefix.py  cop007.py  cop007_temp_var.py  cop008.py  cop008_final_class.py  cop009.py  cop009_mapping_proxy.py  cop010.py  cop010_dataclass_config.py  dataclass_config.py  final_class.py  for_loop_one_prefix.py  function_verb.py  mapping_proxy.py  module_import.py  module_import_many_names.py  module_import_stdlib.py  name_length.py  scalar_annotation.py  temp_var.py
src/community_of_python_flake8_plugin/checks/disabled/: module_import_many_names.py
tests/: test_cop011_modified.py  test_plugin.py
