[project]
name = "community-of-python-flake8-plugin"
version = "0.1.27"
description = "Community of Python flake8 plugin"
readme = "README.md"
authors = [
    { name = "Lev Vereshchagin", email = "mail@vrslev.com" }
]
requires-python = ">=3.14"
dependencies = ["flake8"]

[project.entry-points."flake8.extension"]
COP = "community_of_python_flake8_plugin.plugin:CommunityOfPythonFlake8Plugin"

[tool.pytest.ini_options]
addopts = "-v"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "auto-typing-final",
]
test = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "EM",
    "FBT",
    "TRY003",
    "D1",
    "D203",
    "D213",
    "G004",
    "FA",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["S101", "S311"]

[tool.mypy]
strict = true

[tool.flake8]
select = ["COP"]
exclude = [".venv"]

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
